# apiodactyl-v2

./: Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  docker-entrypoint.sh  woah.txt
src/: auth.rs  cli.rs  db.rs  errors.rs  main.rs  models.rs
src/handlers/: books.rs  games.rs  misc.rs  mod.rs  projects.rs  reviews.rs  wplace.rs
