[package]
name = "apiodactyl"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
dotenvy = "0.15.7"
hex = { version = "0.4.3", features = ["serde"] }
mongodb = "3.2.5"
rocket = { version = "0.5.1", features = ["json", "serde_json"] }
rocket_cors = "0.6.0"
rocket_db_pools = { version = "0.2.0", features = ["mongodb"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
